Fix argument parser + update JUnit to 5.8.2